apps/infrastructure/reposilite/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reposilite
spec:
  selector:
    app: reposilite
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
