apps/infrastructure/reposilite/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reposilite
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-lab
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - reposilite.lab
    secretName: reposilite-tls
  rules:
  - host: reposilite.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reposilite
            port:
              number: 80
